Fix @SafeVarargs warnings